<resources>
    <string name="app_name">BiB Free Version</string>
    <string name="activity_label">Build it Bigger Free Version</string>
    <string name="instructions">Press the button for a delicious joke!</string>
    <string name="button_text">Tell Joke</string>
    <string name="action_settings">Settings</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="logo">@string/app_name</string>
</resources>
