<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivityFragment">

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/coord"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/Toolbar">

            <android.support.v7.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/toolbar"
                app:theme="@style/Toolbar">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_launcher"
                    android:scaleType="center"
                    android:layout_gravity="start"
                    android:contentDescription="@string/logo"
                    android:background="@color/colorPrimary"
                    app:layout_scrollFlags="scroll|enterAlways" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/app_name"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title" />
            </android.support.v7.widget.Toolbar>
        </android.support.design.widget.AppBarLayout>

    </android.support.design.widget.CoordinatorLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="?attr/actionBarSize">
        <TextView
            android:text="@string/instructions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/instructions_text_view" />

        <Button
            android:layout_below="@id/instructions_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_text"
            android:onClick="tellJoke"

            />

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            ads:adSize="BANNER"
            ads:adUnitId="@string/banner_ad_unit_id"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"/>
    </RelativeLayout>


</FrameLayout>
